--- a/undergraduate.qmd
+++ b/undergraduate.qmd
@@ -1,1 +1,56 @@
+---
+title: "Undergraduate Coursework"
+page-layout: full
+format:
+  html:
+    toc: false
+---
 
+Below is a selection of undergraduate coursework in statistics, mathematics, and quantitative methods. Grade annotations: (***) ≥95%, (**) 90–94%, (*) 85–89%.
+
+---
+
+### Statistics
+
+- **Probability Theory** — Fall 2022 (*)
+- **Mathematical Statistics** — Spring 2023 (*)
+- **Regression Analysis** — Spring 2023 (*)
+- **Multivariate Statistical Analysis** — Fall 2023 (***)
+- **Sampling Theory** — Fall 2023 (***)
+- **Categorical Data Analysis** — Fall 2023 (**)
+- **Econometrics** — Fall 2023 (**)
+- **Market Research and Forecasting** — Fall 2023 (**)
+- **Time Series Analysis** — Spring 2024 (**)
+- **Nonparametric Statistics** — Spring 2024 (**)
+- **Stochastic Processes** — Spring 2024
+
+---
+
+### Mathematics
+
+- **Linear Algebra I** — Fall 2021 (**)
+- **Linear Algebra II** — Spring 2022 (**)
+- **Mathematical Analysis I** — Fall 2021 (**)
+- **Mathematical Analysis II** — Spring 2022
+- **Mathematical Analysis III** — Spring 2023 (*)
+- **Operations Research** — Fall 2022 (***)
+- **Ordinary Differential Equations** — Spring 2023 (**)
+- **Analytical Geometry** — Fall 2021
+
+---
+
+### Computing and Data
+
+- **Programming in C** — Spring 2022 (*)
+- **Statistical Modeling (R)** — Fall 2022
+- **Mathematical Modeling (MATLAB)** — Spring 2023 (**)
+- **Data Mining (Python)** — Fall 2023 (**)
+- **Database Systems (SQL)** — Fall 2023
+- **Complex Data Modeling (R)** — Fall 2024 (**)
+
+---
+
+## Notes
+
+- Course titles are listed in English for readability.
+- 
