--- a/undergraduate.qmd
+++ b/undergraduate.qmd
@@ -6,7 +6,7 @@ format:
     toc: false
 ---
 
-Below is a selection of undergraduate coursework in statistics, mathematics, and quantitative methods. Grade annotations: (`***`) ≥95%, (`**`) 90–94%, (`*`) 85–89%.
+Below is a selection of undergraduate coursework in statistics, mathematics, and quantitative methods. Grade annotations: (`***`) ≥95%, (`**`) 90–94%, (`*`) 85–89%. Course titles are listed in English for readability.
 
 ---
 
@@ -49,8 +49,3 @@ Below is a selection of undergraduate coursework in statistics, mathematics, and
 - **Complex Data Modeling (R)** — Fall 2024 (**)
 
 ---
-
-## Notes
-
-- Course titles are listed in English for readability.
-- 
