--- a/index.qmd
+++ b/index.qmd
@@ -1,8 +1,6 @@
 ---
-title: ""
+title: "Ruitian Liu"
 ---
-
-# Ruitian Liu
 
 I am a graduate student in the Department of Statistics at the University of California, Davis, where I began my M.S. in Statistics in 2025. Prior to that, I earned my B.S. in Statistics from North China Institute of Science and Technology between 2021-2025. 
 
